--- a/Samples/AppCenter/app/build.gradle
+++ b/Samples/AppCenter/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.taobao.android.game20x7a"
+        applicationId "com.openatlas.android.appcenter"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.00x70"
     }
     buildTypes {
         release {
